--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,8 @@
     "dayjs": "^1.11.10",
     "antd": "^5.12.0",
     "@ant-design/icons": "^5.2.6"
+    ,
+    "react-grid-layout": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
