--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,9 +19,10 @@
     "zustand": "^4.4.7",
     "dayjs": "^1.11.10",
     "antd": "^5.12.0",
-    "@ant-design/icons": "^5.2.6"
-    ,
-    "react-grid-layout": "^1.4.0"
+    "@ant-design/icons": "^5.2.6",
+    "react-grid-layout": "^1.4.0",
+    "echarts": "^5.4.3",
+    "echarts-for-react": "^3.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
