--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,19 +10,24 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
+    "@react-three/drei": "^9.122.0",
+    "@react-three/fiber": "^8.18.0",
+    "@tanstack/react-query": "^5.13.0",
+    "@types/three": "^0.181.0",
+    "antd": "^5.12.0",
+    "axios": "^1.6.2",
+    "dayjs": "^1.11.10",
+    "echarts": "^5.4.3",
+    "echarts-for-react": "^3.0.2",
+    "maath": "^0.10.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0",
-    "axios": "^1.6.2",
-    "recharts": "^2.10.3",
-    "@tanstack/react-query": "^5.13.0",
-    "zustand": "^4.4.7",
-    "dayjs": "^1.11.10",
-    "antd": "^5.12.0",
-    "@ant-design/icons": "^5.2.6",
     "react-grid-layout": "^1.4.0",
-    "echarts": "^5.4.3",
-    "echarts-for-react": "^3.0.2"
+    "react-router-dom": "^6.20.0",
+    "recharts": "^2.10.3",
+    "three": "^0.181.2",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
