feat: add PostgreSQL support with TimescaleDB integration and update database connection handling

--- a/backend/common/Cargo.toml
+++ b/backend/common/Cargo.toml
@@ -14,3 +14,4 @@ uuid = { workspace = true }
 tracing = { workspace = true }
 mongodb = { workspace = true }
 redis = { workspace = true }
+sqlx = { workspace = true }
